# shirabe

./: Cargo.toml  README.md  build.rs  justfile
.github/workflows/: checks.yml  docs.yml  npm-release.yml  publish.yml  release.yml
crates/shirabe-crawler/: Cargo.toml  PR_DESCRIPTION.md  README.md
crates/shirabe-crawler/src/: driver.rs  drivers.rs  error.rs  extract.rs  frontier.rs  lib.rs  link_discovery.rs  politeness.rs  sink.rs  worker.rs
crates/shirabe-crawler/src/drivers/: mock.rs  shirabe.rs
crates/shirabe-crawler/tests/: integration.rs
docs/: lagrange.toml
docs/ar/: README.md  SUMMARY.md
docs/ar/guides/: backends.md  bundling.md  foreign-engines.md  quickstart.md
docs/en/: SUMMARY.md
docs/en/guides/: backends.md  bundling.md  crawler.md  foreign-engines.md  quickstart.md
docs/es/: README.md  SUMMARY.md
docs/es/guides/: backends.md  bundling.md  foreign-engines.md  quickstart.md
docs/fr/: README.md  SUMMARY.md
docs/fr/guides/: backends.md  bundling.md  foreign-engines.md  quickstart.md
docs/ja/: README.md  SUMMARY.md
docs/ja/guides/: backends.md  bundling.md  foreign-engines.md  quickstart.md
docs/ko/: README.md  SUMMARY.md
docs/ko/guides/: backends.md  bundling.md  foreign-engines.md  quickstart.md
docs/ru/: README.md  SUMMARY.md
docs/ru/guides/: backends.md  bundling.md  foreign-engines.md  quickstart.md
docs/zhs/: README.md  SUMMARY.md
docs/zhs/guides/: backends.md  bundling.md  crawler.md  foreign-engines.md  quickstart.md
docs/zht/: README.md  SUMMARY.md
docs/zht/guides/: backends.md  bundling.md  foreign-engines.md  quickstart.md
src/: backend.rs  browser_fetch.rs  bundle.rs  engine.rs  ffi.rs  lib.rs  main.rs  mcp.rs  resolver.rs
tests/: mcp_smoke.rs
