[package]
name = "shirabe"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["langyo <langyo.china@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
description = "Headless browser automation — CDP engine + HTTP debug API"
repository = "https://github.com/celestia-island/shirabe"
keywords = ["browser", "cdp", "chrome", "headless", "automation"]
categories = ["web-programming", "api-bindings", "development-tools"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "shirabe"
path = "src/lib.rs"

[[bin]]
name = "shirabe"
path = "src/main.rs"

[features]
default = ["auto-fetch"]
# Build-time download of pinned Chrome for Testing
auto-fetch = []
# Runtime fallback: download on first use if Chrome not found
runtime-fetch = ["dep:sha2", "dep:zip"]
# Firefox / Servo backends via the FFI engine contract (dlopen a vendor lib).
foreign-engine = ["dep:libloading"]
# Standalone MCP (Model Context Protocol) server. Hosts the debug HTTP API
# in-process on an ephemeral port and exposes the browser tools over stdio.
mcp = ["dep:rmcp", "dep:schemars", "tokio/io-std"]

[dependencies]
tokio = { version = "^1", features = ["rt-multi-thread", "net", "process", "macros", "time", "sync"] }
tokio-tungstenite = { version = "^0.27", features = ["rustls-tls-webpki-roots"] }
axum = "^0.8"
tower-http = { version = "^0.6", features = ["cors", "compression-gzip"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
futures = "^0.3"
futures-util = "^0.3"
chrono = "^0.4"
base64 = "^0.22"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
clap = { version = "^4", features = ["derive"] }
anyhow = "^1"
# reqwest: needed by engine.rs for devtools polling (always) + browser download (optional)
reqwest = { version = "^0.13", features = ["json", "blocking", "rustls-no-provider"], default-features = false }
rustls = { version = "^0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
# Optional: runtime Chrome download (sha256 verify + zip extract)
sha2 = { version = "^0.10", optional = true }
zip = { version = "^8", optional = true }
# Optional: Firefox / Servo backends are driven through a C-ABI engine contract
# shipped as a dynamic library (built by the browser vendors, published to
# Releases). `libloading` dlopens that contract.
libloading = { version = "^0.8", optional = true }
# MCP (optional, for standalone MCP server)
rmcp = { version = "^1", optional = true, features = ["server", "transport-io", "macros", "schemars"] }
schemars = { version = "^1", optional = true, features = ["derive"] }

[dev-dependencies]
serial_test = "^3"

[build-dependencies]
anyhow = "^1"
reqwest = { version = "^0.13", features = ["blocking", "rustls-no-provider"], default-features = false }
rustls = { version = "^0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
sha2 = "^0.10"
zip = "^8"
